--- a/index.html
+++ b/index.html
@@ -22,15 +22,9 @@
     <div class="main-container">
       <div class="main-page">
         <div class="top">
-          <div class="search-field">
-            <span class="icon"><i class="fa fa-search"></i></span>
-            <input type="search" id="search" placeholder="Search..." />
-          </div>
-          <img src="/images/logo.png" alt="" />
-          <div class="wallet">
-            <img src="images/shopping-cart.png" alt="" />
-            <h3>40,25$</h3>
-          </div>
+          <img src="images/menu.png" class="navbar" />
+          <img src="/images/logo.png" class="logo-top" />
+          <img src="images/price.png" class="basket" />
         </div>
         <div class="poster">
           <div class="header">
@@ -63,37 +57,61 @@
           <img src="images/flower1.png" alt="" />
           <p class="bouquet">Cristal (pink carnations with mix flowers)</p>
           <p class="price">From $125.00</p>
-          <button class="flower-button" type="button">View options</button>
+          <button
+            class="flower-button"
+            text="View options"
+            hover-text="Sold out"
+          ></button>
         </div>
         <div class="flower-card">
           <img src="images/flower2.png" alt="" />
           <p class="bouquet">Milana (bouquet with garden roses)</p>
           <p class="price">From $245.00</p>
-          <button class="flower-button" type="button">View options</button>
+          <button
+            class="flower-button"
+            text="View options"
+            hover-text="Sold out"
+          ></button>
         </div>
         <div class="flower-card">
           <img src="images/flower3.png" alt="" />
           <p class="bouquet">Diamond bouquet pink roses</p>
           <p class="price">From $200.00</p>
-          <button class="flower-button" type="button">View options</button>
+          <button
+            class="flower-button"
+            text="View options"
+            hover-text="Sold out"
+          ></button>
         </div>
         <div class="flower-card">
           <img src="images/flower4.png" alt="" />
           <p class="bouquet">Bouquet Hyacinth pink</p>
           <p class="price">From $150.00</p>
-          <button class="flower-button" type="button">View options</button>
+          <button
+            class="flower-button"
+            text="View options"
+            hover-text="Sold out"
+          ></button>
         </div>
         <div class="flower-card">
           <img src="images/flower5.png" alt="" />
           <p class="bouquet">Bouquet rose bush odilia</p>
           <p class="price">From $245.00</p>
-          <button class="flower-button" type="button">View options</button>
+          <button
+            class="flower-button"
+            text="View options"
+            hover-text="Sold out"
+          ></button>
         </div>
         <div class="flower-card">
           <img src="images/flower6.png" alt="" />
           <p class="bouquet">Bouquet of delicate carnation rose</p>
           <p class="price">From $210.00</p>
-          <button class="flower-button" type="button">View options</button>
+          <button
+            class="flower-button"
+            text="View options"
+            hover-text="Sold out"
+          ></button>
         </div>
       </div>
     </div>
@@ -189,37 +207,45 @@
     </div>
     <div class="blogs-container">
       <div class="instagram">
-        <h2 class="container-header">FOLLOW US ON INSTAGRAM</h2>
+        <h2 class="header-instagram container-header">
+          FOLLOW US ON INSTAGRAM
+        </h2>
         <a href="#">@cherryblossom.la</a>
         <img src="images/instagram.png" alt="" />
       </div>
       <div class="blog">
         <div class="info-card">
           <img src="images/blogs3.png" alt="" />
-          <h3>In amet, mollis</h3>
-          <p>
-            Ipsum dui sit non ipsum leo, dictumst. Dictumst. Et pulvinar leo, id
-            ut. Eget mattis pellentesque mattis dolor adipiscing accumsan elit.
-            Non libero, libero, amet tortor, velit ex.
-          </p>
+          <div class="blog-text">
+            <h3>In amet, mollis</h3>
+            <p>
+              Ipsum dui sit non ipsum leo, dictumst. Dictumst. Et pulvinar leo,
+              id ut. Eget mattis pellentesque mattis dolor adipiscing accumsan
+              elit. Non libero, libero, amet tortor, velit ex.
+            </p>
+          </div>
         </div>
         <div class="info-card">
           <img src="images/blogs1.png" alt="" />
-          <h3>In amet, mollis</h3>
-          <p>
-            Ipsum dui sit non ipsum leo, dictumst. Dictumst. Et pulvinar leo, id
-            ut. Eget mattis pellentesque mattis dolor adipiscing accumsan elit.
-            Non libero, libero, amet tortor, velit ex.
-          </p>
+          <div class="blog-text">
+            <h3>In amet, mollis</h3>
+            <p>
+              Ipsum dui sit non ipsum leo, dictumst. Dictumst. Et pulvinar leo,
+              id ut. Eget mattis pellentesque mattis dolor adipiscing accumsan
+              elit. Non libero, libero, amet tortor, velit ex.
+            </p>
+          </div>
         </div>
         <div class="info-card">
           <img src="images/blogs2.png" alt="" />
-          <h3>In amet, mollis</h3>
-          <p>
-            Ipsum dui sit non ipsum leo, dictumst. Dictumst. Et pulvinar leo, id
-            ut. Eget mattis pellentesque mattis dolor adipiscing accumsan elit.
-            Non libero, libero, amet tortor, velit ex.
-          </p>
+          <div class="blog-text">
+            <h3>In amet, mollis</h3>
+            <p>
+              Ipsum dui sit non ipsum leo, dictumst. Dictumst. Et pulvinar leo,
+              id ut. Eget mattis pellentesque mattis dolor adipiscing accumsan
+              elit. Non libero, libero, amet tortor, velit ex.
+            </p>
+          </div>
         </div>
       </div>
     </div>
